# image_artisan_z

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: convert_lokr_to_lora.py
src/iartisanz/: __main__.py
src/iartisanz/app/: app.py  base_dialog.py  base_simple_dialog.py  component_registry.py  directories.py  event_bus.py  iartisanz_application.py  logging_conf.py  main_window.py  migration.py  model_manager.py  modules.py  preferences.py  snackbar.py
src/iartisanz/buttons/: base_menu_button.py  brush_erase_button.py  color_button.py  drawing_tool_button.py  expand_contract_button.py  eyedropper_button.py  generate_button.py  linked_button.py  remove_button.py  transparent_button.py  vertical_button.py  vertical_label.py
src/iartisanz/configuration/: initial_setup_dialog.py
src/iartisanz/layouts/: aspect_ratio_layout.py  flow_layout.py  simple_flow_layout.py
src/iartisanz/modules/: base_module.py
src/iartisanz/modules/generation/: component_compatibility.py  constants.py  full_screen_preview.py  generate_button.py  generation_module.py  generation_settings.py  image_viewer_simple.py  prompt_input.py  prompts_widget.py
src/iartisanz/theme/: stylesheet.qss
src/iartisanz/utils/: database.py  image_converters.py  image_processor.py  image_utils.py  json_utils.py  model_utils.py
src/iartisanz/utils/database/: database.py
src/iartisanz/utils/models/: model_utils.py
tests/: __init__.py  conftest.py
tests/app/: test_component_registry.py  test_iartisanz_application.py  test_main_window.py  test_migration.py  test_model_manager_attention_backend.py  test_model_manager_offload_strategies.py  test_model_manager_offload_strategies_flux2.py
tests/fakes/: __init__.py  app.py  qt.py  qt_and_app.py
tests/fixtures/: __init__.py  lora_test_fixtures.py
tests/modules/generation/: test_component_compatibility.py  test_controlnet_inpainting_validation.py  test_controlnet_spatial_mask_regression.py  test_generation_module_controlnet_mode_decay.py  test_generation_module_edit_images.py  test_generation_module_source_image_mask.py  test_generation_settings_attention_backend.py  test_source_image_mask_validation.py
tests/modules/generation/graph/: test_graph_controlnet_serialization.py  test_graph_from_json_cleanup.py  test_iartisanz_node_graph.py
tests/modules/generation/image/: image_editor_test.py  layer_manager_widget_test.py
tests/modules/generation/lora/: __init__.py  test_denoise_node_lora_mask.py  test_lokr_peft_coexistence.py  test_lokr_unmerge_regression.py  test_lora_conversion.py  test_lora_load_after_inference.py  test_lora_node_mask_loading.py  test_mask_cleanup.py  test_patch_lora_forward_pass.py  test_spatial_mask_reshaping.py
tests/modules/generation/source_image/: source_image_dialog_test.py
tests/modules/generation/threads/: test_generation_thread_controlnet_inpaint_independent.py  test_generation_thread_controlnet_mode_decay.py  test_generation_thread_edit_images.py  test_generation_thread_load_json.py  test_generation_thread_lora_prune.py  test_lokr_run_graph_cleanup.py
tests/utils/: test_component_hashing.py  test_json_utils_extract_loras.py
(+135 files in other folders)
