[project]
name = "ImageArtisanZ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.4.0",
    "diffusers>=0.36.0",
    "image-gen-aux>=0.1.0.dev0",
    "kernels>=0.12.1",
    "opencv-python-headless>=4.13.0.90",
    "peft>=0.18.1",
    "pillow>=12.1.0",
    "protobuf>=6.33.4",
    "pyqt6>=6.10.2",
    "sdnq>=0.1.5",
    "superqt==0.7.4",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
    "triton>=3.6.0",
    "vcolorpicker>=1.4.4",
    "xxhash>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
]
test = [
    "pytest>=9",
    "pytest-cov>=7",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
diffusers = { git = "https://github.com/huggingface/diffusers" }
image-gen-aux = { git = "https://github.com/huggingface/image_gen_aux" }

[project.gui-scripts]
iartisanz = "iartisanz.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.pytest.ini_options]
markers = [
  "slow: long-running tests (opt-in)",
  "hf: tests that download or use Hugging Face models (opt-in)",
  "real_model: tests that use real local models (opt-in via IARTISANZ_RUN_REAL_MODEL_TESTS=1)",
]
